windows py36 doesn't support ansi

--- a/wasabi/tests/test-data/wasabi-test-notebook.ipynb
+++ b/wasabi/tests/test-data/wasabi-test-notebook.ipynb
@@ -7,11 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wasabi\n",
-    "wasabi.msg.warn(\"This is a test. This is only a test.\")\n",
-    "assert wasabi.util.supports_ansi()\n",
-    "\n",
     "import sys\n",
+    "import wasabi\n",
+    "\n",
+    "wasabi.msg.warn(\"This is a test. This is only a test.\")\n",
+    "if sys.version_info >= (3, 7):\n",
+    "    assert wasabi.util.supports_ansi()\n",
+    "\n",
     "print(sys.stdout)"
    ]
   }
